--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /input/exposure/
 /input/crashes/
 /input/processed/edge_ec_201601_201709_monthly.gpkg
+input/processed/edge_ec_201601_201709_monthly.gpkg
