--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /input/crashes/
 /input/processed/edge_ec_201601_201709_monthly.gpkg
 input/processed/edge_ec_201601_201709_monthly.gpkg
+*.gpkg
+*.rdata
+*.gpkg
