--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 /input/exposure/
 /input/crashes/
 /input/processed/edge_ec_201601_201709_monthly.gpkg
-input/processed/edge_ec_201601_201709_monthly.gpkg
+/input/processed/edge_ec_201601_201709_monthly.gpkg
+/R/3_case_study_KDE.html
+/R/4_case_study_LISA.html
 *.gpkg
 *.rdata
 *.gpkg
