--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,12 @@
 .Rhistory
 .RData
 .Ruserdata
-/input/exposure/
-/input/crashes/
-/input/processed/edge_ec_201601_201709_monthly.gpkg
-/input/processed/edge_ec_201601_201709_monthly.gpkg
-/R/3_case_study_KDE.html
-/R/4_case_study_LISA.html
+input/exposure/
+input/crashes/
+input/processed/edge_ec_201601_201709_monthly.gpkg
+input/processed/edge_ec_201601_201709_monthly.gpkg
+R/*.html
 *.gpkg
 *.rdata
-*.gpkg
-*.html
+
+
